--- a/site/src/views/products/products.ejs
+++ b/site/src/views/products/products.ejs
@@ -42,146 +42,23 @@
         </div>
     </section>
 
-      <div class="container-productos">
-      <!-- MENU DE CATEGORIAS Y FILTRO-->
-        <div class="div-izquierdo-productos">
-                        <p>Categorias</p>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Planta Inerior</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox"> Planta Exterior</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Macetas</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Accesorios</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Fertilizante</label><br>
-                       
 
-        </div>
-                <!--LISTADO DE PRODUCTOS-->
-
+    <!--LISTADO DE PRODUCTOS-->
     <section class="products">
-
-                <article class="products-container">
-
-                <div class="desciption-product">
-                <a href ="/productos/detalle"><img src="images/plantas/interior/anthurium - m15.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Anthurium</h4>
-                <p class="price">$550</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productos/detalle"><img src="images/plantas/interior/aphelandra - m 14.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Aphelandra</h4>
-                <p class="price">$550</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-            <div class="desciption-product">
-                    <a href ="/productos/detalle"><img src="images/plantas/interior/areca -7 lts.png" alt="Plantas de Interior"></a>
-                    <h4 class="name">Areca</h4>
-                    <p class="price">$550</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-
-             <div class="desciption-product">
-                <a href ="/productos/detalle"><img src="images/plantas/interior/pothus - m12.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Pothus</h4>
-                <p class="price">$550</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productos/detalle"><img src="images/plantas/interior/estrella-federal.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Estrella Federal</h4>
-                <p class="price">$550</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="images/plantas/interior/asplenium-crispi - m12.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Asplenium Crispi</h4>
-                <p class="price">$900</p>
-                <p class="dues">6 cuotas de $150</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="images/plantas/interior/oreja-de-elefante.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Oreja de Elefante</h4>
-                <p class="price">$600</p>
-                <p class="dues">6 cuotas de $100</p>
-            </div>
-
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Orquídea - m16.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Orquidea</h4>
-                <p class="price">$1200</p>
-                <p class="dues">6 cuotas de $200</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="images\plantas\interior\Marginata Tricolor - m15.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Margarita Ticolor</h4>
-                <p class="price">$1800</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Jazmin Gardenia Augusta - 4lts.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Jazmin Gardenia</h4>
-                <p class="price">$1200</p>
-                <p class="dues">6 cuotas de $200</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Helecho - b18.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Helecho</h4>
-                <p class="price">$3600</p>
-                <p class="dues">6 cuotas de $600</p>
-            </div>
-
-
-           <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Peperomia . m12.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Peperomia</h4>
-                <p class="price">$3600</p>
-                <p class="dues">6 cuotas de $600</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Cordatum Brasilero - m 14.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Cordatum Brasilero</h4>
-                <p class="price">$6000</p>
-                <p class="dues">6 cuotas de $1000</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Seaphortia Elegans - 5 lts.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Seaphortia Elegants</h4>
-                <p class="price">$1800</p>
-                <p class="dues">6 cuotas de $300</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Fittonia - m 14.png" alt="Plantas de Interior"></a>
-                <h4 class="name">Fittonia</h4>
-                <p class="price">$4200</p>
-                <p class="dues">6 cuotas de $700</p>
-            </div>
-
-            <div class="desciption-product">
-                <a href ="/productDetail"><img src="\images\plantas\interior\Vara de San Jorge - m12.jpg" alt="Plantas de Interior"></a>
-                <h4 class="name">Vara de San Jorge</h4>
-                <p class="price">$3000</p>
-                <p class="dues">6 cuotas de $500</p>
-            </div>
-
-        </article>
-
+        <% productos.forEach (producto => { %>
+            <article class="products-container">
+                <div class="description-product">
+                    <a href ="/productos/<%= producto.identificador %> "><img src= "images/productos/<%= producto.image %>" alt="Plantas de Interior" enctype= ></a>
+                    <h4 class="name"><%= producto.name %></h4>
+                    <p class="price">$<%= producto.price %></p>
+                </div>
+            </article>
+        <% })%> 
     </section>
-        
-    </main>
 
-</div>
+
+    </div>  
+    </main>
 
            <!-- PARTIAL DEL FOOTER-->
 <%-include ("../partials/footer.ejs") %>
