--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -53,8 +53,13 @@
         </select>
 
         <button type="submit" class="boton-agregar-pd">Agregar a Carrito</button>
-
         <p>Si ya agregaste este producto podras ir a <a class = "a-pd"href="/productos/carrito">mi carrito</a></p>
+        <br>
+        <form></form>
+        <a href ="/productos/<%= producto.identificador %>/editar" ><button class="boton-agregar-pd">Editar producto</button></a>
+        <form action= "/productos/<%= producto.identificador %>?_method=delete" method="POST">
+            <button class="boton-agregar-pd">Borrar producto</button>
+        </form>
 
 
     </section>
