--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -86,17 +86,14 @@
                 <button type="submit" class="formulario-boton-fr">CREAR CUENTA</button>
                 
                
-                <p> Si ya perteneces a nuestra comunidad entonces..<br><a href="/usuario/iniciar-sesion">Iniciá sesión</a></p>
+                <p> Si ya perteneces a nuestra comunidad entonces..<br><a href="/login">Iniciá sesión</a></p>
             
             </form>
         
         </section>
     
     </main>
-             <!-- PARTIAL DEL FOOTER-->
-             <%-include ("../partials/footer.ejs") %>
-   
 </div>
- 
+    <%-include ("../partials/footer.ejs") %>
     </body>
 </html>
