--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -1,12 +1,52 @@
+<!-- esta pagina es ususarios/DETALLE DE USUARIO -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu perfil</title>
-</head>
-<body>
-    Este es tu perfil 
-</body>
+    <!-- PARTIAL DEL HEAD-->
+    <%- include("../partials/head.ejs")%>
+    
+    <body>
+    <!-- PARTIAL DEL HEADER-->
+    <%-include ("../partials/header.ejs") %>
+
+    <!-- INICIO MAIN  -->
+    <div class="contenedor-general">
+    <!--MUENU HORIZONTAL-->
+
+    <div class="menu-horizontal"><a href="/" > Inicio /</a> <a href="/">Mi Cuenta /</a> <a href="#"><strong>Registro</strong></a></div>
+
+    
+    <!--INICIO DE FORMULARIO-->
+
+    <main class= "Main-fr">
+        <section class= "section-fr">
+
+            <form action ="/usuario/registrarse" method ="POST" class="form-fr">
+
+                <p class= "formulario-titulo-fr"><strong>TU PERFIL</strong></p>
+
+            <div class="fomulario-div-fr">
+                <label for="name"><strong>NOMBRE</strong></label>
+                <div class="formulario-input-fr">user.name </div>
+                
+            </div> 
+            <div class="fomulario-div-fr">  
+                <label for="email"><strong>EMAIL</strong></label>
+                <div class="formulario-input-fr"> user.email </div>
+            </div> 
+            <div class="fomulario-div-fr">               
+                <label for="tel"><strong>TELÉFONO</strong></label>
+                <div class="formulario-input-fr"> use.tel </div>
+            </div> 
+            <div class="fomulario-div-fr">               
+                <label for="img"><strong>IMAGEN DE PERFIL</strong></label>
+            </div>         
+                
+            </form>
+        
+        </section>
+    
+    </main>
+    </div>
+    <%-include ("../partials/footer.ejs") %>
+    </body>
 </html>
