reparacion de footer y redireccionamiento a la pagina de perfil

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,8 +4,8 @@
             <div class= "cont-footer">
                 <span class="titulo-footer">CONTACTANOS</span>
                 <ul>
-                    <li><i class="fas fa-phone"></i> +54 11 *******</li>
-                    <li><i class="fab fa-whatsapp"></i> +54 11 *****</li>
+                    <li><i class="fas fa-phone"></i> +54 116-306-0560</li>
+                    <li><i class="fab fa-whatsapp"></i> +54 116-306-0560</li>
                     <li><i class="fas fa-at"></i> contacto@calathea.com.ar</li>
                     <li><i class="fas fa-map-marker-alt"></i> Showroom: Amenábar 4587 2 "D". <br>Sucursal Palermo: Ravignani 5498, Capital Federal</li>
                 </ul>
@@ -14,9 +14,9 @@
             <div class="cont-footer">
                 <span class="titulo-footer">MEDIOS DE PAGO</span>
                 <ul class="medios-de-pago">
-                    <li><img width= 50px heigth= 50px src= "images/footer/visa.jpg"></li>
-                    <li><img width= 50px heigth= 50px src= "images/footer/mastecard.jpg"></li>
-                    <li><img width= 50px heigth= 50px src= "images/footer/mercadopago.jpeg"></li>
+                    <li><img width= 50px heigth= 50px src= "/images/footer/visa.jpg"></li>
+                    <li><img width= 50px heigth= 50px src= "/images/footer/mastecard.jpg"></li>
+                    <li><img width= 50px heigth= 50px src= "/images/footer/mercadopago.jpeg"></li>
                     <!--
                     <li><img width= 50px heigth= 50px src= "images/pagofacil.png"></li>
                     <li><img width= 50px heigth= 50px src= "images/rapipago.jpg"></li>
