usuario logueado, perfil completo con daos y middelware de guest y auth

--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -39,7 +39,11 @@
                             </div>
                         <% } %>
                     </div>
-    
+                    <div class="recordar-usuario-div">
+                        <label class="recordar-usuario-label">
+                            <input type="checkbox" name="recordar_usuario" class="recordar-usuario-input"> RECORDAR USUARIO
+                        </label>
+                    </div>
                     <p><a href="" class="contraseña-olvidada">¿Olvidaste tu contraseña?</a></p>
                     
     
