--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -26,19 +26,20 @@
 
             <div class="fomulario-div-fr">
                 <label for="name"><strong>NOMBRE</strong></label>
-                <div class="formulario-input-fr">user.name </div>
+                <div class="formulario-input-fr"><%= usuario.name %>  </div>
                 
             </div> 
             <div class="fomulario-div-fr">  
                 <label for="email"><strong>EMAIL</strong></label>
-                <div class="formulario-input-fr"> user.email </div>
+                <div class="formulario-input-fr"><%= usuario.email %> </div>
             </div> 
             <div class="fomulario-div-fr">               
                 <label for="tel"><strong>TELÉFONO</strong></label>
-                <div class="formulario-input-fr"> use.tel </div>
+                <div class="formulario-input-fr"> <%= usuario.tel %> </div>
             </div> 
             <div class="fomulario-div-fr">               
-                <label for="img"><strong>IMAGEN DE PERFIL</strong></label>
+                <label for="img"><strong>AVATAR</strong></label>
+                <img src="/images/user-images/<%= usuario.imagen %>" alt="">
             </div>         
                 
             </form>
