--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -47,12 +47,11 @@
         </section>
         <p class="titulo-pd">PRODUCTOS DESTACADOS</p>
         <section class= "section-productos-destacados">
-            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
-            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
-            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
-            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
-            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
-            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
+            <section class= "producto-destacado"><a href= ""></a></section>
+            <section class= "producto-destacado"><a href= ""></a></section>
+            <section class= "producto-destacado"><a href= ""></a></section>
+            <section class= "producto-destacado"><a href= ""></a></section>
+            <section class= "producto-destacado"><a href= ""></a></section>
         </section>
     </main>
 </div> 
