--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -13,7 +13,7 @@
         <h1 class= "titulo-carrito">Carrito de compras</h1>
         <section class= "cuadro-carrito">
             <div id= "imagen-nombre" class= "item-carrito">
-                <img id= "imagen-producto" src= "images/producto.jpeg">
+                <img id= "imagen-producto" src= "/images/plantas/interior/pothus-m12.jpg">
                 <h4 id= "imagen-nombre" class= "item-carrito">DÚO NACARADA CHICA + PHILO PERUVIANO</h4>
             </div>
             <div id= "cantidad-carrito" class= "item-carrito">
