--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -20,7 +20,7 @@
                 <p class= "formulario-titulo-fr"><strong> Unite a nuestra comunidad!</strong></p>
 
             <div class="fomulario-div-fr">
-                <label for="name"><strong>NOMBRE</strong></label>
+                <label for="name"><strong>NOMBRE COMPLETO</strong></label>
                 <input type="text" name="name" id="name" 
                     class="formulario-input-fr <%= locals.errors && errors.name ? "error-border" : null %>" 
                     value="<%= locals.oldData && oldData.name ? oldData.name : '' %>">
