--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -12,35 +12,43 @@
     <div class="contenedor-general">
     <!--MUENU HORIZONTAL-->
 
-    <div class="menu-horizontal"><a href="/" > Inicio /</a> <a href="/">Mi Cuenta /</a> <a href="#"><strong>Registro</strong></a></div>
+    <div class="menu-horizontal"><a href="/" > Inicio /</a> <a href="/">Mi Cuenta /</a> <a href="/usuario/perfil"><strong>Perfil</strong></a></div>
 
     
     <!--INICIO DE FORMULARIO-->
 
     <main class= "Main-fr">
-        <section class= "section-fr">
+        <section class= "section-perfil">
 
             <form action ="/usuario/registrarse" method ="POST" class="form-fr">
 
                 <p class= "formulario-titulo-fr"><strong>TU PERFIL</strong></p>
 
-            <div class="fomulario-div-fr">
-                <label for="name"><strong>NOMBRE</strong></label>
-                <div class="formulario-input-fr"><%= usuario.name %>  </div>
-                
-            </div> 
+                <section class="section-izquierdo-contacto">
+                <div class="perfil-div-img">               
+                    <label for="img" class="perfil-img"><strong>AVATAR</strong></label>
+                    <img src="/images/user-images/<%=usuario.imagen %>" alt="avatar" class="perfil-img">
+                </div>   
+                </section><br><br>
+
+
+                <section class="section-izquierdo-contacto">
+                    <div class="fomulario-div-fr">
+                            <label for="name"><strong>NOMBRE COMPLETO</strong></label>
+                        <div class="formulario-input-fr"><%=usuario.name %></div>
+                    </div> 
+
             <div class="fomulario-div-fr">  
                 <label for="email"><strong>EMAIL</strong></label>
-                <div class="formulario-input-fr"><%= usuario.email %> </div>
+                <div class="formulario-input-fr"><%=usuario.email %></div>
             </div> 
+
             <div class="fomulario-div-fr">               
                 <label for="tel"><strong>TELÉFONO</strong></label>
-                <div class="formulario-input-fr"> <%= usuario.tel %> </div>
-            </div> 
-            <div class="fomulario-div-fr">               
-                <label for="img"><strong>AVATAR</strong></label>
-                <img src="/images/user-images/<%= usuario.imagen %>" alt="">
-            </div>         
+                <div class="formulario-input-fr"><%=usuario.tel %></div>
+            </div> <br><br>
+
+        </section>    
                 
             </form>
         
