retoques en la pagina de productos

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/72a545861a.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="/images/logo/favicon-32x32.png">
     <link href="/css/styles2.css" rel= "stylesheet">
 
 </head>
