--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -175,38 +175,6 @@ main {
     100% {margin-left: -300%;}
 }
 
-/*.hero {
-    height: 300px;
-    overflow: hidden;
-    background: url(/images/SLIDE1.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin-top: 1rem;
-}
-
-.hero-container {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    text-align: center;
-    transform: translate(-50%, -50%);
-    font-weight: 700;
-}
-
-.hero-container span{
-    padding: 6px 14px;
-    display: inline-block;
-    background-color: #754668;
-    display:none;
-}
-
-.hero-texto {
-    text-decoration: none;
-    color: white;
-}*/
-
-
 .opciones-catalogo {
     display: flex;
     flex-direction: column;
@@ -548,27 +516,57 @@ color: pink
  }
 
 .description-product{
-   border: solid #754668 0.3rem;
    width: 20rem;
-   height: 20rem;
+   height: 23rem;
    margin: 1.5rem;
-   ;
+   border-radius: 7px;
+   box-shadow: 5px 5px 5px rgba(102, 51, 117, 0.5) 
+   
 }
 
 .description-product img{
-   width: 70%;
-   height: 70%;
+   width: 60%;
+   height: 55%;
+   margin-top: 2px;
+}
+.name {
+    margin-bottom: 3px;
+}
+.price{
+    font-family: sans-serif;
+    font-size: 1.5rem;
+    margin-bottom: 3px;
 }
 
+.category{
+    margin-bottom: 3px;
+}
 
-.dues{
-   display: inline-block;
-   background-color: #537467;
-   color:white;
-   border : solid 1px grey;
-   padding: 5px 50px;
-   margin-top: 5px;
+   .buttom-detail,
+   .buttom-cart {
+       background-color: #537467;
+       color: white;
+       padding: 10px;
+       margin-left: 5px;
+       border-radius: 7px;
+       border: none;
+       cursor: pointer;
+       
+        
    }
+
+   .buttom-detail:hover {
+       color: pink,
+       
+
+   }
+
+   .buttom-cart:hover{
+    color: pink,
+    
+    
+    }
+
   
 /* FIN DE LOS ESTILOS DE LA PAGINA DE PRODUCTOS*/
 
@@ -788,7 +786,7 @@ color: pink
     flex-direction: row;
     align-items: center;
     margin: 0.5rem;
-    color: #754668
+    color: rgb(118, 71, 105)
 }
 
 
@@ -887,13 +885,15 @@ color: pink
     border-radius: 1rem;
     }
 
+.cont-footer a{
+    color: white;
+}
 
 
 /*footer-bottom*/
 
 .footer-bottom {
     background-color: #5c3251;
-    color: white;
     display: flex;
     padding: 2rem 1rem;
     font-size: 0.8rem;
@@ -903,7 +903,7 @@ color: pink
 .footer-bottom a{
     text-decoration: none;
     margin: 0.5rem;
-    color: black;
+    color: white;
     font-weight: bold;
     align-items: center;
 
