reparacion del crud (crear y modificar)

--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -29,7 +29,7 @@
         
           <div class="div-formulario-contacto">
             <label for="category"><strong>CATEGORIAS</strong></label>
-                <select class="formulario-input-contacto" name="id_category" id="id_category">
+                <select class="formulario-input-contacto" name="id_categories" id="id_categories">
                     <% categories.forEach(category => { %>
                     <option value="<%= category.id %>"><%=category.name %></option>
                    <% }) %> 
