--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -11,6 +11,12 @@
     margin: auto;
 }
 
+
+.fr-error {
+    color: red;
+    font-weight: 800;
+    margin: 5px
+}
 /*header*/
 
 
@@ -474,6 +480,12 @@ a { text-decoration: none;}
     justify-content: center;
 }
 
+.users{
+    text-align: center;
+    margin: 3rem 0px;
+    justify-content: center;
+}
+
 
 
 .input-nav-productos{
@@ -514,6 +526,12 @@ color: pink
    margin: 1rem 0px;
 
  }
+ .users-container{
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0px;
+ 
+  }
 
 .description-product{
    width: 20rem;
@@ -536,6 +554,13 @@ color: pink
     font-family: sans-serif;
     font-size: 1.5rem;
     margin-bottom: 3px;
+}
+.datos-usuario{
+    font-family: sans-serif;
+    font-size: 1.3rem;
+    margin-bottom: 3px;
+    color:rgb(118, 71, 105);
+    font-weight: bolder;
 }
 
 .category{
@@ -965,6 +990,10 @@ color: pink
 @media (min-width: 768px){
 
     .products {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .users {
         display: flex;
         flex-wrap: wrap;
     }
