--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -55,8 +55,9 @@
         <button type="submit" class="boton-agregar-pd">Agregar a Carrito</button>
         <p>Si ya agregaste este producto podras ir a <a class = "a-pd"href="/productos/carrito">mi carrito</a></p>
         <br>
-        <form></form>
-        <a href ="/productos/<%= producto.id %>/editar" ><button class="boton-agregar-pd">Editar producto</button></a>
+        <form action="/productos/<%= producto.id %>/editar">
+            <button class="boton-agregar-pd">Editar producto</button>
+        </form>
         <form action= "/productos/<%= producto.id %>?_method=delete" method="POST">
             <button class="boton-agregar-pd">Borrar producto</button>
         </form>
