Barra de navegación para modo mobile

--- a/src/views/not-found.ejs
+++ b/src/views/not-found.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPS....</title>
-</head>
+    <!-- PARTIAL DEL HEAD-->
+    <%- include("../partials/head.ejs")%>
+
+    <!-- PARTIAL DEL HEADER-->
+    <%-include ("../partials/header.ejs") %>
+   
 <body>
-    <H1>NO PUDIMOS ENCONTRAR LO QUE BUSCAS PEEEERO SI QUERES TE DEJAMOS UNAS OPCIONES</H1>
+    <H1> Ups! Parece que ocurrió un error. Por favor intentalo nuevamente más tarde</H1>
+    <p>Para regresar a la página hace click <a href="/"> acá!</a> 
 </body>
 </html>
