--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -9,6 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/72a545861a.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/logo/favicon-32x32.png">
-    <link href="/css/styles2.css" rel= "stylesheet">
+    <link href="/css/styles.css" rel= "stylesheet">
 
 </head>
